--- a/main.scss
+++ b/main.scss
@@ -11,4 +11,4 @@
   margin: 0 auto;
 }
 
-@import 'partials/header', 'partials/heroBanner';
+@import 'partials/header', 'partials/heroBanner', 'partials/swiper';
