--- a/main.scss
+++ b/main.scss
@@ -11,4 +11,7 @@
   margin: 0 auto;
 }
 
-@import 'partials/header', 'partials/heroBanner', 'partials/swiper';
+@import 'partials/header', 
+        'partials/heroBanner', 
+        'partials/highlightsSwiper',
+        'partials/categories';
