--- a/main.css
+++ b/main.css
@@ -179,4 +179,136 @@ body {
 }
 .swiper .swiper-slide .productDescription .actualPrice {
   font-weight: 500;
+}
+
+.categorySection .coachCategory {
+  position: relative;
+  max-width: 1200px;
+  margin: 25px auto 0;
+}
+.categorySection .coachCategory img {
+  width: 100%;
+  height: 100%;
+}
+.categorySection .coachCategory .card {
+  position: absolute;
+  width: 400px;
+  height: 200px;
+  padding: 20px;
+  background-color: rgba(255, 255, 255, 0.9);
+  top: calc(50% - 100px);
+  right: 25px;
+  z-index: 10;
+}
+.categorySection .coachCategory .card .cardTitle {
+  max-width: 198px;
+  margin-bottom: 5px;
+}
+.categorySection .coachCategory .card span {
+  color: #797979;
+}
+.categorySection .coachCategory .card button {
+  position: relative;
+  margin-top: 25px;
+  padding: 0.75rem 2.25rem;
+  font-weight: bold;
+  background: white;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  border: 0;
+  cursor: pointer;
+}
+.categorySection .coachCategory .card button::before {
+  content: "";
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  padding: 1.25rem 4.25rem;
+  border: 2px solid red;
+  z-index: -1;
+}
+.categorySection .rowCategories {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1200px;
+  margin: 5px auto 0;
+}
+.categorySection .rowCategories .chairCategory {
+  position: relative;
+  max-width: 595px;
+}
+.categorySection .rowCategories .chairCategory img {
+  width: 100%;
+  height: 100%;
+}
+.categorySection .rowCategories .chairCategory .card {
+  position: absolute;
+  width: 275px;
+  height: 175px;
+  padding: 15px;
+  background-color: rgba(255, 255, 255, 0.9);
+  top: 50%;
+  right: 25px;
+  z-index: 10;
+}
+.categorySection .rowCategories .chairCategory .card .cardTitle {
+  max-width: 200px;
+}
+.categorySection .rowCategories .chairCategory .card button {
+  position: relative;
+  margin-top: 25px;
+  padding: 0.75rem 2.25rem;
+  font-weight: bold;
+  background: white;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  border: 0;
+  cursor: pointer;
+}
+.categorySection .rowCategories .chairCategory .card button::before {
+  content: "";
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  padding: 1.25rem 4.25rem;
+  border: 2px solid red;
+  z-index: -1;
+}
+.categorySection .rowCategories .decorationCategory {
+  position: relative;
+  max-width: 595px;
+}
+.categorySection .rowCategories .decorationCategory img {
+  width: 100%;
+  height: 100%;
+}
+.categorySection .rowCategories .decorationCategory .card {
+  position: absolute;
+  width: 275px;
+  height: 175px;
+  padding: 15px;
+  background-color: rgba(255, 255, 255, 0.9);
+  top: 50%;
+  right: 25px;
+  z-index: 10;
+}
+.categorySection .rowCategories .decorationCategory .card .cardTitle {
+  max-width: 200px;
+}
+.categorySection .rowCategories .decorationCategory .card button {
+  position: relative;
+  margin-top: 25px;
+  padding: 0.75rem 2.25rem;
+  font-weight: bold;
+  background: white;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  border: 0;
+  cursor: pointer;
+}
+.categorySection .rowCategories .decorationCategory .card button::before {
+  content: "";
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  padding: 1.25rem 4.25rem;
+  border: 2px solid red;
+  z-index: -1;
 }/*# sourceMappingURL=main.css.map */
