--- a/main.scss
+++ b/main.scss
@@ -14,4 +14,5 @@
 @import 'partials/header', 
         'partials/heroBanner', 
         'partials/highlightsSwiper',
-        'partials/categories';
+        'partials/categories',
+        'partials/highlightsCategories';
