--- a/partials/_highlightsSwiper.scss
+++ b/partials/_highlightsSwiper.scss
@@ -72,7 +72,7 @@ body {
       .oldPrice {
         margin: 5px 0;
         font-size: .9rem;
-        color: rgb(121, 121, 121);
+        color: rgb(121 121 121);
       }
 
       .actualPrice {
